[package]
name = "eggersmann_app_server_insightly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_security_keyvault = "~0"
azure_identity = "~0"
base64 = "~0"
reqwest = { version = "~0", features = ["cookies", "blocking", "json", "rustls-tls"] }
serde = { version = "~1", features = ["derive"] }