[package]
name = "eggersmann_app_server_insightly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_security_keyvault = "*"
azure_identity = "*"
base64 = "*"
reqwest = { version = "*", features = ["cookies", "blocking", "json", "rustls-tls"] }
serde = { version = "*", features = ["derive"] }
rocket = { version = "*", features=['json'] }
serde_json = "*"