[package]
name = "eggersmann_app_server_insightly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_security_keyvault = "0.20"
azure_identity = "0.20"
base64 = "0.22"
reqwest = { version = "0.12", features = ["cookies", "blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5", features=['json'] }
serde_json = "1.0"